[gd_scene load_steps=12 format=2]

[ext_resource path="res://track/track.gd" type="Script" id=1]
[ext_resource path="res://track/taikoshadow.png" type="Texture" id=2]
[ext_resource path="res://track/picker_anim.tscn" type="PackedScene" id=3]
[ext_resource path="res://TaikoNoTatsujinDrumnFun_Screenshot_02.jpeg" type="Texture" id=4]
[ext_resource path="res://track_progress/track_progress.tscn" type="PackedScene" id=5]
[ext_resource path="res://taiko_screen.jpeg" type="Texture" id=6]
[ext_resource path="res://track/pile.png" type="Texture" id=8]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.791667, 1 )
colors = PoolColorArray( 0.321569, 0.172549, 0.168627, 1, 0.529412, 0.27451, 0.368627, 1, 0.235294, 0.2, 0.211765, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
texture = SubResource( 4 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 75.966

[node name="Track" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenshotSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 305.672, 166.841 )
texture = ExtResource( 4 )

[node name="ScreenshotSprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 1.36774, 1.36771 )
texture = ExtResource( 6 )
centered = false

[node name="Bg" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 23.76, 4 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TriggerSprite" type="Sprite" parent="."]
position = Vector2( 79, 61 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PickerAnim" parent="." instance=ExtResource( 3 )]
position = Vector2( 79, 61 )

[node name="BarsPosition" type="Position2D" parent="."]
position = Vector2( 78, 0 )

[node name="Bars" type="Node2D" parent="."]
position = Vector2( 78, 0 )

[node name="Picker" type="Area2D" parent="." groups=["area_good", "picker"]]
position = Vector2( 78, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Picker"]
position = Vector2( 0.0662861, -4.35741 )
shape = SubResource( 2 )

[node name="TrackProgress" parent="." instance=ExtResource( 5 )]
position = Vector2( 202.544, -63.874 )

[node name="PileSprite" type="Sprite" parent="."]
modulate = Color( 0.690196, 0.701961, 0.980392, 1 )
position = Vector2( 856, -52 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="CollectedNotesC" type="Node2D" parent="."]
position = Vector2( -328, -192 )

[node name="PileC" type="Node2D" parent="."]
position = Vector2( 856, -52 )

[connection signal="area_entered" from="Picker" to="." method="_on_Picker_area_entered"]
[connection signal="area_exited" from="Picker" to="." method="_on_Picker_area_exited"]
